# animalia

./: .env.example  Makefile  README.md  docker-compose.yml
algorithm/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
algorithm/common/: multimodal_feature_extractor.py
algorithm/recommend-system/src/: data.py  engine.py  neumf.py
algorithm/recommend_system/api/: main.py  recommend_timeline.py
algorithm/recommend_system/base/: engine.py  gmf.py  mlp.py  train.py  utils.py
algorithm/recommend_system/components/: data.py  engine.py  mmneumf.py
algorithm/recommend_system/models/: mmneumf.py
algorithm/recommend_system/notebooks/: check.ipynb
algorithm/recommend_system/src/: download_model.py  train_prod.py  train_sim.py  upload_model.py
algorithm/recommend_system/src/simulation/: train_sim.py
algorithm/recommend_system/utils/: config.py  database.py  engine.py
algorithm/search-engine/: README.md
algorithm/search_engine/src/: app.py
algorithm/task_scoring_system/api/: main.py
algorithm/task_scoring_system/src/: upload_task_feature.py
app-dev/src/: MultiModalImageSearch.py  check_postgres_conn.py  image_search.py  st_app.py
app-front/: app.config.js  app.json  babel.config.js  env.d.ts  package-lock.json  package.json
app-front/app/: _layout.tsx
app-front/components/: CreatePostModal.tsx  FormInput.tsx  ParallaxScrollView.tsx  PetEditModal.tsx  PetPanel.tsx  PetRegisterModal.tsx  PostPanel.tsx  ProfileEditModal.tsx  ProfileHeader.tsx  ProfileModal.tsx  (+6 more)
back/: .gitignore  .prettierrc  Dockerfile  compose.yaml  docker-compose.override.yml  package.json  tsconfig.json
backend-go/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  schema.hcl  tools.go
front/: .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json
search-engine/: .gitignore  README.md  requirements.txt
(+201 files in other folders)
